--- a/index.html
+++ b/index.html
@@ -1,7 +1,36 @@
 <!DOCTYPE html>
 <head>
 <title>Welcome</title>
+  <style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    text-align: center;
+  }
+
+  h1 {
+    color: #4CAF50;
+  }
+
+  p {
+    font-size: 16px;
+    color: #555;
+  }
+
+  a {
+    color: #008CBA;
+    text-decoration: none;
+    font-weight: bold;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+</style>
 </head>
+</head>
+
 <body>
 <h1>Welcome</h1>
 <p>A simple html program</p>
