--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,7 @@
     <!-- Footer -->
     <footer>
         <p>© 2024 Karthika. All rights reserved.</p>
+        <a href="index.html">Back</a>
     </footer>
 
     <!-- Back to Top Button -->
