--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html">Back</a></li>
             </ul>
         </nav>
         <div class="hero">
@@ -89,7 +90,7 @@
 
     <!-- Back to Top Button -->
     <a href="#home" class="back-to-top">Back to Top</a>
-     <a href="index.html">Back</a>
+     
 
     <script src="F:\it90\scripts.js"></script>
 </body>
