--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
 <h1>Welcome</h1>
 <p>A simple html program</p>
   <a href="portfolio.html">portfolio</a>
+  <a href="todolist.html">todolist</a>
 </body>
 </html>
