--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="container">
         <h1>Welcome</h1>
         <ul class="list">
-            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li><br><br>
             <li><a href="todolist.html">To-Do List</a></li>
         </ul>
     </div>
