--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
             <label for="message">Message:</label>
             <textarea id="message" name="message" required></textarea>
 
-            <button type="submit">Send</button>
+            <button type="submit">Submit</button>
         </form>
         <p>Connect with me:</p>
         <ul class="social-media">
