--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
         <h1>Welcome</h1>
         <ul class="list">
             <li><a href="portfolio.html">Portfolio</a></li><br><br>
-            <li><a href="todolist.html">To-Do List</a></li>
+            <li><a href="todolist.html">To-Do List</a></li><br><br>
+            <li><a href="micro.html">Portfolio</a></li><br><br>
         </ul>
     </div>
     <footer>
