--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,8 @@
     
     <section id="about">
         <h2>About Me</h2>
-        <p>I'm a full-stack web developer with a passion for building responsive, user-friendly websites and web applications.</p>
+        <p>Hello! Karthika, a passionate B.Tech IT student at UCE Trichy, where I am immersed in the dynamic world of technology and innovation. 
+            With a keen interest in software development, data analysis, cybersecurity, I am dedicated to honing my skills and knowledge to make meaningful contributions to the tech industry</p>
         
     </section>
 
