--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
     
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! Karthika, a passionate B.Tech IT student at UCE Trichy, where I am immersed in the dynamic world of technology and innovation. 
+        <p>I'm Karthika, a passionate B.Tech IT student at UCE Trichy, where I am immersed in the dynamic world of technology and innovation.<br> 
             With a keen interest in software development, data analysis, cybersecurity, I am dedicated to honing my skills and knowledge to make meaningful contributions to the tech industry</p>
         
     </section>
