--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <ul class="list">
             <li><a href="portfolio.html">Portfolio</a></li><br><br>
             <li><a href="todolist.html">To-Do List</a></li><br><br>
-            <li><a href="Microblog.html">Microblogging</a></li><br><br>
+            <li><a href="https://github.com/Karthika2706/kart/blob/main/Microblog.html">Microblogging</a></li><br><br>
         </ul>
     </div>
     <footer>
