--- a/FD.html
+++ b/FD.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Delivery App</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="fstyle.css">
 </head>
 <body>
     <header>
@@ -52,6 +52,6 @@
         </div>
     </main>
 
-    <script src="script.js"></script>
+    <script src="fscript.js"></script>
 </body>
 </html>
