--- a/FD.html
+++ b/FD.html
@@ -14,7 +14,7 @@
     <main>
         <section id="menu">
             <div class="dish">
-                <img src="https://www.google.com/imgres?q=burger%20images%20download&imgurl=https%3A%2F%2Fimages.pexels.com%2Fphotos%2F1639557%2Fpexels-photo-1639557.jpeg%3Fcs%3Dsrgb%26dl%3Dpexels-valeriya-1639557.jpg%26fm%3Djpg&imgrefurl=https%3A%2F%2Fwww.pexels.com%2Fsearch%2Fburger%2F&docid=nOuoqawVn9QGgM&tbnid=KuI69tpI_pc1yM&vet=12ahUKEwi9wdCl2dqIAxUxRWwGHZE2Ey4QM3oECH4QAA..i&w=6509&h=4339&hcb=2&ved=2ahUKEwi9wdCl2dqIAxUxRWwGHZE2Ey4QM3oECH4QAA" alt="Burger">
+                <img src="https://images.pexels.com/photos/1639557/pexels-photo-1639557.jpeg?cs=srgb&dl=pexels-valeriya-1639557.jpg&fm=jpg" alt="Burger">
                 <h2>Burger</h2>
                 <p>$10</p>
                 <p>Delicious beef burger with fresh lettuce and tomatoes.</p>
