--- a/FD.html
+++ b/FD.html
@@ -22,7 +22,7 @@
             </div>
 
             <div class="dish">
-                <img src="pizza.jpg" alt="Pizza">
+                <img src="https://c4.wallpaperflare.com/wallpaper/234/543/684/food-pizza-wallpaper-preview.jpg" alt="Pizza">
                 <h2>Pizza</h2>
                 <p>$15</p>
                 <p>Cheesy pizza topped with pepperoni and olives.</p>
@@ -30,7 +30,7 @@
             </div>
 
             <div class="dish">
-                <img src="pasta.jpg" alt="Pasta">
+                <img src="https://images.pexels.com/photos/1438672/pexels-photo-1438672.jpeg?cs=srgb&dl=pexels-enginakyurt-1438672.jpg&fm=jpg" alt="Pasta">
                 <h2>Pasta</h2>
                 <p>$12</p>
                 <p>Creamy pasta with chicken and mushroom sauce.</p>
