--- a/Microblog.html
+++ b/Microblog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Microblogging App</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="mstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -28,6 +28,6 @@
             <div id="feed"></div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="mscript.js"></script>
 </body>
 </html>
