--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <li><a href="portfolio.html">Portfolio</a></li><br><br>
             <li><a href="todolist.html">To-Do List</a></li><br><br>
             <li><a href="Microblog.html">Microblogging</a></li><br><br>
-            <li><a href="foodelivery.html">Microblogging</a></li><br><br>
+            <li><a href="foodelivery.html">Food Delivery</a></li><br><br>
            
         </ul>
     </div>
