--- a/foodelivery.html
+++ b/foodelivery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ORDERBITE</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="fstyle.css">
 </head>
 <body>
     <header>
@@ -20,6 +20,6 @@
     <main>
         <div id="content"></div>
     </main>
-    <script src="script.js"></script>
+    <script src="fscript.js"></script>
 </body>
 </html>
