--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
             const userName = document.getElementById('user-name').value;
             localStorage.setItem('userName', userName); // Store the username
             alert('Login successful! Redirecting to menu...');
-            window.location.href = 'food.html'; // Redirect to main page
+            window.location.href = 'foodelivery.html'; // Redirect to main page
         });
     </script>
 </body>
