--- a/foodelivery.html
+++ b/foodelivery.html
@@ -96,6 +96,9 @@
         <p>&copy; 2024 ORDERBITES Food Delivery</p>
     </footer>
 
-    <script src="fscript.js"></script>
+    <script src="fdscript.js"></script>
 </body>
 </html>
+
+
+         
