--- a/foodelivery.html
+++ b/foodelivery.html
@@ -96,7 +96,7 @@
         <p>&copy; 2024 ORDERBITES Food Delivery</p>
     </footer>
 
-    <script src="fdscript.js"></script>
+    <script src="fscript.js"></script>
 </body>
 </html>
 
