--- a/ex5/web.html
+++ b/ex5/web.html
@@ -3,41 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reuse Hub</title>
+    <title>Reuse Hub 🛍️</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>Reuse Hub 🛍️</h1>
+        <nav>
+            <button id="productsBtn">Products</button>
+            <button id="postAdBtn">Post an Ad</button>
+            <button id="cartBtn" onclick="location.href='cart.html'">Cart</button>
+            <button id="logoutBtn">Logout</button>
+        </nav>
+        <input type="text" id="searchBar" placeholder="Search products...">
+    </header>
 
-<header>
-    <h1>Reuse Hub</h1>
-    <nav>
-        <button id="productsBtn">Products</button>
-        <button id="postAdBtn">Post an Ad</button>
-        <button id="cartBtn">Cart</button>
-        <button id="logoutBtn">Logout</button>
-    </nav>
-</header>
+    <main>
+        <div id="itemForm" class="hidden">
+            <h2>Post an Ad</h2>
+            <input type="text" id="itemName" placeholder="Item Name" required>
+            <input type="number" id="itemPrice" placeholder="Price" required>
+            <textarea id="itemDescription" placeholder="Description" required></textarea>
+            <input type="file" id="itemImage" accept="image/*" required>
+            <button id="submitItemBtn">Submit</button>
+            <button id="cancelBtn">Cancel</button>
+        </div>
 
-<main>
-    <div id="itemForm" class="hidden">
-        <h2>Post an Ad</h2>
-        <input type="text" id="itemName" placeholder="Item Name" required>
-        <input type="number" id="itemPrice" placeholder="Item Price" required>
-        <textarea id="itemDescription" placeholder="Item Description"></textarea>
-        <input type="file" id="itemImage" accept="image/*">
-        <button id="submitItemBtn">Submit</button>
-        <button id="cancelBtn">Cancel</button>
+        <div id="itemList">
+            <!-- Items will be dynamically added here -->
+        </div>
+    </main>
+
+    <!-- Payment Modal -->
+    <div id="paymentModal" class="modal hidden">
+        <div class="modal-content">
+            <span class="close-button" onclick="closeModal()">&times;</span>
+            <h2>Select Payment Method</h2>
+            <button onclick="selectPaymentMethod('Credit Card')">Credit Card</button>
+            <button onclick="selectPaymentMethod('PayPal')">PayPal</button>
+            <button onclick="selectPaymentMethod('Bank Transfer')">Bank Transfer</button>
+        </div>
     </div>
 
-    <div id="itemList"></div>
-
-    <div id="cart" class="hidden">
-        <h2>Your Cart</h2>
-        <div id="cartItems"></div>
-        <button id="checkoutBtn" class="hidden">Checkout</button>
+    <!-- Card Details Modal -->
+    <div id="cardDetailsModal" class="modal hidden">
+        <div class="modal-content">
+            <span class="close-button" onclick="closeCardDetailsModal()">&times;</span>
+            <h2>Enter Card Details</h2>
+            <input type="text" id="cardNumber" placeholder="Card Number" required>
+            <input type="text" id="cvc" placeholder="CVC" required>
+            <button id="submitPaymentBtn">Submit Payment</button>
+        </div>
     </div>
-</main>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
+
+      
