--- a/ex5/cart.html
+++ b/ex5/cart.html
@@ -40,7 +40,7 @@
     <header>
         <h1>Your Cart 🛒</h1>
         <nav>
-            <button onclick="window.location.href='web.html'">Products</button>
+            <button onclick="window.location.href="web.html">Products</button>
             <button id="logoutBtn">Logout</button>
         </nav>
     </header>
