--- a/ex5/web.html
+++ b/ex5/web.html
@@ -12,7 +12,7 @@
         <nav>
             <button id="productsBtn">Products</button>
             <button id="postAdBtn">Post an Ad</button>
-            <button id="cartBtn" onclick="location.href='cart.html'">Cart</button>
+            <button id="cartBtn" onclick="location.href="ex5/cart.html">Cart</button>
             <button id="logoutBtn">Logout</button>
         </nav>
         <input type="text" id="searchBar" placeholder="Search products...">
