--- a/ex5/web.html
+++ b/ex5/web.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reuse Hub 🛍️</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="ex5/styles.css">
 </head>
 <body>
     <header>
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="ex5/script.css"></script>
 </body>
 </html>
 
