--- a/ex5/web.html
+++ b/ex5/web.html
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-    <script src="ex5/script.css"></script>
+    <script src="ex5/script.js"></script>
 </body>
 </html>
 
