--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             <li><a href="Microblog.html">Microblogging</a></li>
             <li><a href="login.html">Food Delivery</a></li>
              <li><a href="ex5/login.html">Web application</a></li>
+            <li><a href="ex6/im.html">Leave Management</a></li>
         </ul>
     </div>
     <footer>
